# pplx-chat

./: .env.example  .gitignore  LICENSE  README.md  config.default.yaml  install.sh  pplx  pyproject.toml
src/pplx_chat/: __main__.py  api.py  app.py  commands.py  config.py  db.py  export.py  logger.py  models.py  prompt.py  streaming.py  ui.py
