[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pplx-chat"
version = "1.1.0"
description = "Professional Perplexity AI CLI chatbot"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Evil Null"}]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tenacity>=8.0",
]

[project.scripts]
pplx = "pplx_chat.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
